fix nav bug where nav links would be forced to wrap in navbar and other small refactoring

--- a/client/src/assets/css/dark.css
+++ b/client/src/assets/css/dark.css
@@ -50,5 +50,4 @@
   --fixed-width: 500px;
   --fluid-width: 80vw;
   --breakpoint-lg: 992px;
-  --nav-height: 6rem;
 }
